--- a/home/templates/home/dashboard/mentor.html
+++ b/home/templates/home/dashboard/mentor.html
@@ -109,10 +109,16 @@
 
 				<p>Mentor feedback dates:
 				<ul>
-					<li>{{ rel.intern_selection.initial_feedback_due }} 4pm UTC - Feedback #1 is due</li>
-					<li>{{ rel.intern_selection.midpoint_feedback_due }} 4pm UTC - Feedback #2 is due</li>
-					<li>{{ rel.intern_selection.feedback3_due }} 4pm UTC - Feedback #3 is due</li>
-					<li>{{ rel.intern_selection.final_feedback_due }} 4pm UTC - Feedback #4 is due</li>
+					{% if rel.intern_selection.feedback3_due %}
+						<li>{{ rel.intern_selection.initial_feedback_due }} 4pm UTC - Feedback #1 is due</li>
+						<li>{{ rel.intern_selection.midpoint_feedback_due }} 4pm UTC - Feedback #2 is due</li>
+						<li>{{ rel.intern_selection.feedback3_due }} 4pm UTC - Feedback #3 is due</li>
+						<li>{{ rel.intern_selection.final_feedback_due }} 4pm UTC - Feedback #4 is due</li>
+					{% else %}
+						<li>{{ rel.intern_selection.initial_feedback_due }} 4pm UTC - Initial feedback is due</li>
+						<li>{{ rel.intern_selection.midpoint_feedback_due }} 4pm UTC - Midpoint feedback is due</li>
+						<li>{{ rel.intern_selection.final_feedback_due }} 4pm UTC - Final feedback is due</li>
+					{% endif %}
 				</ul>
 				</p>
 				<h3>Intern Payment Schedule</h3>
