Remove mentor mailing list contact form and references to it.
The Outreachy mentor mailing list started out as a dual-purpose list.
Outreachy organizers would send email to mentors with announcements, and
Outreachy applicants could use it to contact mentors if they couldn't
get a hold of them via the mentor's open source community chat.

Now the Outreachy mentor mailing list is only used for announcements and
private discussion between Outreachy mentors and organizers. All
questions about applying to Outreachy we want to go to the
applicant-help email. So it no longer makes sense to have a form on the
website to allow anyone to contact the Outreachy mentor mailing list.

Remove templates, views, and URL patterns for that contact form. Remove
references to it in the initial application acceptance email.

Change the wording on the contact page to encourage all people
interested in applying to use the applicant-help contact form.

Before, we placed specific suggestions of things applicants might ask
(like eligibility criteria). I think that lead some applicants to send
questions to Outreachy organizers when their questions weren't about
eligibility criteria.

Change the wording to encourage all communication from applicants to go
to the applicant-help email.

--- a/contacts/templates/contact_form/contact.html
+++ b/contacts/templates/contact_form/contact.html
@@ -11,11 +11,7 @@ Contact Outreachy
 
 <h2>Outreachy Applicant Help</h2>
 
-<p>Outreachy volunteers are looking forward questions from Outreachy applicants! If you need help filling out your initial application, or you have any questions about how to apply, please <a href="{% url 'contact-applicant-help' %}">contact Outreachy applicant help</a>.</p>
-
-<h2>Outreachy Mentors</h2>
-
-<p>Please <a href="{% url 'contact-mentors' %}">contact coordinators and mentors</a> for general applicant questions, such as which project to choose or if you are having a hard time contacting a mentor.</p>
+<p>Outreachy volunteers are happy to answer questions from Outreachy applicants! If you want to apply to Outreachy or you have a question about applying to Outreachy, please <a href="{% url 'contact-applicant-help' %}">contact Outreachy applicant help</a>.</p>
 
 <h2>Outreachy Organizers</h2>
 
