Remove mention of Cindy as an Outreachy organizer.
Cindy is no longer on the Outreachy PLC, and is not an Outreachy
organizer.

--- a/home/templates/home/promote.html
+++ b/home/templates/home/promote.html
@@ -79,7 +79,7 @@ Promote Outreachy internships
 
 <p>Applying to Outreachy is a little different than other internship programs. You'll fill out an initial application. If your initial application is approved, you'll move onto the five week contribution phase. During the contribution phase, you'll make contact with project mentors and make a contribution to the project. Outreachy organizers have found that the strongest applicants contact mentors early, ask a lot of questions, and continually submit contributions throughout the contribution phase.</p>
 
-<p>Please let us know if you have any questions about the program. The Outreachy organizers (Karen Sandler, Sage Sharp, Marina Zhurakhinskaya, Cindy Pallares, and Tony Sebro) can all be reached at through our contact form: <a href="https://www.outreachy.org/contact/contact-us/">https://www.outreachy.org/contact/contact-us/</a></p>
+<p>Please let us know if you have any questions about the program. The Outreachy organizers can all be reached at through our contact form: <a href="https://www.outreachy.org/contact/contact-us/">https://www.outreachy.org/contact/contact-us/</a></p>
 
 <p>We hope you'll help us spread the word about Outreachy internships!</p>
 
