Update sponsor page.
Update sponsor page to include commonly asked sponsor questions: sponsor
amounts, sponsor perks, and sponsorship deadline dates.

Move the "why sponsor diversity" and "why sponsor outreachy" sections
down. People who look at sponsorship are probably already interested in
sponsoring diversity in tech already.

Move the section about the Outreachy opportunities mailing list into the
FAQ.

Outreachy wants to encourage sponsors to fund the Outreachy general
fund, which gives us the most flexibility. Past sponsors can still fund
a specific community, but we may shift future sponsors to only funding
the Outreachy general fund.

Therefore, remove information about how to sponsor specific communities
from the sponsor page, and update the navigation link to say 'Sponsor
Outreachy' rather than 'Sponsor interns'.

Add a link to the sponsorship presentation.

--- a/outreachyhome/templates/partials/_navigation.html
+++ b/outreachyhome/templates/partials/_navigation.html
@@ -49,8 +49,8 @@
     </a>
 
     <div class="dropdown-menu" aria-labelledby="navbarDonors">
-      <a class="dropdown-item" href="/sponsor/">Sponsor Interns</a>
-      <a class="dropdown-item" href="/sponsor/donate/">Donate to Outreachy</a>
+      <a class="dropdown-item" href="/sponsor/">Sponsor Outreachy</a>
+      <a class="dropdown-item" href="/sponsor/donate/">Individual Donations</a>
     </div>
   </li>
 
