More updates to the sponsorship page
Remove outdated references in the sponsor page to resources still being
on GNOME servers. While the IRC channel is still on irc.gnome.org, we
don't use it any more.

Remove reference to community credits in sponsorship page. We're trying
to get sponsors to fund the general fund, and doesn't make sense to
mention it here.

TODO: Add information about community credits to the Community Guide.

Mention we can invoice sponsors earlier or later to fit budget
deadlines.

Bold questions in FAQ to make it easy to scan.

--- a/home/templates/home/sponsor.html
+++ b/home/templates/home/sponsor.html
@@ -87,6 +87,8 @@ Sponsor Outreachy
 	<li>February - internship ends, great time for sponsors to send job postings to the opportunities mailing list</li>
 </ul>
 
+<p>Outreachy can invoice sponsors earlier or later to align with your quarterly budget deadlines.</p>
+
 <h3>Sponsorship Presentation</h3>
 
 <p>For details on sponsorship and statistics about the program, please read our sponsor presentation: (<a href="https://github.com/outreachy/creative-works-and-scripts/raw/master/creative-works/outreachy-sponsorship.pdf">sponsorship.pdf</a> / <a href="https://github.com/outreachy/creative-works-and-scripts/raw/master/creative-works/outreachy-sponsorship.odp">sponsorship.odp</a>)</p>
@@ -157,9 +159,35 @@ required blog posts about their work on Planet GNOME. Making the
 community a friendly place for underrepresented people also makes it 
 such for all newcomers.</p>
 
-<h2>Commonly Asked Questions</h2>
+<h2>Frequently Asked Questions (FAQ)</h2>
 
-<h4 id="outreachy-opportunities-list">Q: How does the Outreachy opportunities mailing list work?</h4>
+<p><b>Q: Who pays the interns?</b></p>
+
+<p>A: The Outreachy parent non-profit, the Software Freedom Conservancy, handles payments to interns.</p>
+
+<p><b>Q: Are Outreachy interns employees or interns of the corporate sponsors?</b></p>
+<p>A: No. Outreachy interns are considered contractors of the Software Freedom Conservancy during their internship.</p>
+
+<p><b>Q: Are corporate sponsors required to help run the internship program?</b></p>
+
+<p>A: No. The Outreachy application process, intern selection coordination, 
+communication with mentors, and payments to interns are all handled by 
+Outreachy organizers.</p>
+
+<p><b>Q: We have a company internship program. Can you place Outreachy applicants into our internship program?</b></p>
+
+<p>A: No. Outreachy internships are completely separate from any other internship program.</p>
+
+<p><b>Q. If I'm a corporate sponsor, do I have to provide a mentor for the internship program?</b></p>
+
+<p>A: No. While
+ employees from many corporate sponsors mentor for Outreachy, it's not 
+required for corporate sponsors to provide either mentors or internship 
+project ideas. FOSS communities generally provide their own mentors and 
+project ideas. If a sponsor does have an internship idea and a mentor, 
+they should <a href="/mentor/">review the community guidelines</a>.</p>
+
+<p><b>Q: How does the Outreachy opportunities mailing list work?</b></p>
 
 <p>A: Outreachy runs an opt-in mailing list open to all current and past Outreachy interns, coordinators, mentors, and sponsors.</p>
 <p>The primary goal of this list is to connect Outreachy sponsors with 
@@ -182,33 +210,18 @@ opportunity requires people to be in a particular location, please
 include the location in the subject line.
 </p>
 		
-<p>Q: Are corporate sponsors required to help run the internship program?<br/>A:
- No. The Outreachy application process, intern selection coordination, 
-communication with mentors, and payments to interns are all handled by 
-Outreachy organizers.<br/><br/>Q: When do you bill for sponsorship?<br/>A: 
-For the May to August round, sponsors are billed in May. For the 
-December to March round, sponsors are billed in December. If you have a 
-specific quarterly deadline, Outreachy can bill earlier or later. 
-Outreachy general fund sponsors can be billed any time of the year. 
-Billing will be handled through our parent organization, the Software 
-Freedom Conservancy.<br/><br/>Q: Who pays the interns?<br/>A: The Outreachy parent organization, the Software Freedom Conservancy, handles payments to interns.<br/><br/>Q: Are Outreachy interns employees or interns of the corporate sponsors?<br/>A: No. Outreachy interns are considered contractors of the Software Freedom Conservancy during their internship.<br/><br/>Q: We have a company internship program. How does that work with Outreachy internships?<br/>A:
- Outreachy internships are completely separate from any other internship
- program. Outreachy organizers find FOSS communities that are willing to
- provide mentorship and use corporate sponsorship to fund the 
-internships.<br/><br/>Q. If I'm a corporate sponsor, do I have to provide a mentor for the internship program?<br/>A: No. While
- employees from many corporate sponsors mentor for Outreachy, it's not 
-required for corporate sponsors to provide either mentors or internship 
-project ideas. FOSS communities generally provide their own mentors and 
-project ideas. If a sponsor does have an internship idea and a mentor, 
-they should <a href="/mentor/">review the community guidelines</a>.<br/><br/>Q: If I sponsor a specific FOSS community and that community doesn't find an intern, what happens?<br/>A:
- Sometimes FOSS communities don't have enough applicants, or their best 
-applicant accepts another opportunity. Outreachy will try to encourage applicants towards communities that do not have enough applicants but we cannot guarantee that a community will find a suitable intern. We will use our best efforts to work with the sponsor and use the funds for that particular community or another that the sponsor prefers for two years, after which we'll use them for any Outreachy activity.<br/>
+<p><b>Q: Did Outreachy used to be called something else?</b></p>
 
-<br/>Q: Did you used to be called something else?<br/>A: Outreachy was started in 2010 by the GNOME Project as the Outreach Program for Women (OPW). The name was changed in 2015 when the program was moved to Software Freedom Conservancy with a vision to include more people who experience the impact of bias and discrimination in tech. In 2006, the GNOME Project ran a one-time Women's Summer Outreach Program, which was the predecessor of OPW. <br/><br/>Q: Are you still associated with GNOME?<br/>A:
- GNOME has been an Outreachy mentoring community throughout the
+<p>A: Yes. Outreachy was started in 2010 by the GNOME Project as the Outreach Program for Women (OPW). The name was changed in 2015 when the program was moved to Software Freedom Conservancy with a vision to include more people who experience the impact of bias and discrimination in tech. In 2006, the GNOME Project ran a one-time Women's Summer Outreach Program, which was the predecessor of OPW.</p>
+
+<p><b>Q: Are you still associated with GNOME?</b></p>
+
+<p>A: Outreachy is no longer run by GNOME, but GNOME still participates as an Outreachy mentoring community.</p>
+
+<p>GNOME has been an Outreachy mentoring community throughout the
 Outreachy's history. After Outreachy moved under our current non-profit home, Software Freedom Conservancy, GNOME continued to host 
 some Outreachy resources, including our website, wiki, application 
-system, and IRC channel. We thank GNOME for their support of the 
-program.</div></div>
+system, and IRC channel. Outreachy has since migrated its resources to be independently hosted. We thank GNOME for their past support of the program!
+</p>
 
 {% endblock %}
