Removed unused field passed into internship status snippet.
We now use a different field to display the length of internship
extension the mentor wants.

--- a/home/templates/home/feedback3.html
+++ b/home/templates/home/feedback3.html
@@ -26,7 +26,7 @@ Feedback #3 for {{ current_round.official_name }}
 							<p>Action to take:</p>
 						</div>
 						<div class="col-2">
-							<p>{% include 'home/snippet/mentor-feedback-status.html' with intern=i extension_date=i.midpoint_date %}</p>
+							<p>{% include 'home/snippet/mentor-feedback-status.html' with intern=i %}</p>
 						</div>
 						<div class="col-8">
 							<p>
