Major update to feedback #4.
Update feedback #4 questions for mentors and interns to follow the same
format as prior feedback forms.

New questions:

 - Did mentors suggest people the intern could talk to for informal career chats?
 - Did the intern have any informal career chats?

Add a new optional survey at the end of the final feedback form.

Ask mentors:

 -  How likely would you be to recommend a friend or colleague mentor for Outreachy? (Answers are 0 to 10, with 0 = not at all likely and 10 = extremely likely)
 - How has being an Outreachy mentor positively impacted you?
 - How could the mentorship experience be improved?
 - What advice would you give to a new Outreachy mentor?
 - How has this internship positively impacted your open source or open science community?
 - How could the experience for open source or open science communities be improved?
 - Please provide any additional feedback for Outreachy organizers

Ask interns:

 - How likely would you be to recommend a friend contribute to open source? (Answers are 0 to 10, with 0 = not at all likely and 10 = extremely likely)
 - How likely would you be to recommend a friend apply to Outreachy? (Answers are 0 to 10, with 0 = not at all likely and 10 = extremely likely)
 - How did the Outreachy application period positively impact you?
 - How could the application experience be improved?
 - What advice would you give to a new Outreachy applicant?
 - How has being an Outreachy intern positively impacted you?
 - How could the internship experience be improved?
 - How has working with your open source or open science community positively impacted you?
 - How could your experience working with your open source or open science community be improved?
 - Please provide any additional feedback for Outreachy organizers

Limit answers to 800 characters (about 1-3 paragraphs).

TODO: write page to display survey results to Outreachy organizers.

--- a/home/templates/home/dashboard/intern.html
+++ b/home/templates/home/dashboard/intern.html
@@ -94,19 +94,18 @@
 			{% if internship.feedback3frommentor.organizer_payment_approved %}
 				<li>The Outreachy organizers have reviewed feedback #3. Your internship is in good standing.</li>
 			{% endif %}
-			{% if internship.finalinternfeedback %}
+			{% if internship.feedback4fromintern %}
 				<li>You submitted feedback #4.</li>
 			{% endif %}
-			{% if internship.finalmentorfeedback %}
-				<li>Your mentor submitted feedback #4 on {{ internship.finalmentorfeedback.find_version_mentor_edited.revision.date_created }}</li>
+			{% if internship.feedback4frommentor %}
+				<li>Your mentor submitted feedback #4 on {{ internship.feedback4frommentor.find_version_mentor_edited.revision.date_created }}</li>
 			{% endif %}
-			{% if not internship.finalinternfeedback and not internship.finalmentorfeedback %}
+			{% if not internship.feedback4fromintern and not internship.feedback4frommentor %}
 				<li>Neither you nor your mentor have submitted feedback #4.</li>
 			{% endif %}
-			{% if internship.finalmentorfeedback.organizer_payment_approved %}
-				<li>The Outreachy organizers have reviewed feedback #4. Your internship is in good standing. The Outreachy organizers have requested that the Software Freedom Conservancy pay your final stipend.</li>
+			{% if internship.feedback4frommentor.organizer_payment_approved %}
+				<li>The Outreachy organizers have reviewed feedback #4. Your internship is in good standing.</li>
 			{% endif %}
-			<li>Neither you nor your mentor have submitted feedback #4.</li>
 		</ul>
 
 		<p>Dates for you to give feedback on your internship:
