--- a/home/templates/home/sponsor_info.html
+++ b/home/templates/home/sponsor_info.html
@@ -17,14 +17,22 @@ Sponsor info for {{ current_round.official_name }}
 		{% if s.funding_secured %}<tr>{% else %}<tr class="table-warning">{% endif %}
 				<td>{{ s.name }}</td>
 				<td>{{ s.amount }}</td>
-				<td>{{ s.participation.community }}</td>
+				{% if s.participation.approval_status == s.participation.APPROVED %}
+					<td>{{ s.participation.community }}</td>
+				{% else %}
+					<td>{{ s.participation.community }} <span class="badge badge-pill badge-info">pending</span></td>
+				{% endif %}
 			</tr>
 		{% endfor %}
 	</table>
 
 	<h2>Community Sponsors</h2>
 	{% for community, sponsor_set, number_interns_approved, total_funding_needed in community_sponsors %}
-		<hr><h3>{{ community }}</h3>
+		{% if sponsor_set.0.participation.approval_status == sponsor_set.0.participation.APPROVED %}
+			<hr><h3>{{ community }}</h3>
+		{% else %}
+			<hr><h3>{{ community }} <span class="badge badge-pill badge-info">pending</span></h3>
+		{% endif %}
 		<p>${{ total_funding_needed|intcomma }} total funding needed for {{ number_interns_approved }} approved interns. <a href="{% url 'sponsor-info-details' round_slug=current_round.slug community_slug=community.slug %}">Sponsorship details and revision history.</a></p>
 		
 		<ul>
